# consume-iterator

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
