[package]
name = "consume-iterator"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Consume any iterator fully"
repository = "https://github.com/schuelermine/consume-iterator"
keywords = ["no-std", "iterator"]
categories = ["no-std", "no-std::no-alloc", "rust-patterns"]
